[fix] image stretching, add mock data for presentation

--- a/angular-client/src/app/components/gallery/gallery.component.scss
+++ b/angular-client/src/app/components/gallery/gallery.component.scss
@@ -25,11 +25,10 @@
     z-index:1;
 }
 .gallery_image{
-    width:auto;
     position:relative;
-    max-width:100%;
-    min-height:50vw;
-    height:auto;
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
 }
 
 .hoverbg-wrapper{
